--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "antd": "^4.17.3",
     "axios": "^0.24.0",
     "country-flag-icons": "^1.4.25",
+    "moment": "^2.29.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
